# AMPL

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  README.md  at14.fmap  at14_6.fmap  build-and-debug.sh  build-and-run.sh  build-and-test.sh  ci-tests.sh  config.yml  docker-compose.yml  install.sh  run-common.sh  run.sh  set-ip.sh  singletag.fmap
.github/workflows/: build-and-test.yml  build-docs.yml  build-image-nightly.yml  build-image-weekly.yml  build-image.yml  build-rpi-image.yml  integration-test.yml  unit-test.yml
docker/: Dockerfile  build-image.sh  ci-build-image.sh  pull-latest-image.sh  run-container.sh
docs/: Doxyfile  calibration.rst  conf.py  generate-docs.sh  index.rst  introduction.rst  quickstart.rst  requirements.txt  updating.rst
docs/api/: ampl.rst  amplparams.rst  camparams.rst  configparser.rst  ilocalizationstrategy.rst  index.rst  kmeanslocalizationstrategy.rst  localizationworker.rst  logger.rst  maple.rst  mapleparams.rst  meanlocalizationstrategy.rst  ntworker.rst  pose.rst  taglayoutparser.rst  tdcam.rst  tdcamworker.rst  webserverworker.rst  worker.rst
docs/contributing/: index.rst  modifying-docs.rst  simulation.rst
docs/installation/: choosing-hardware.rst  configure.rst  index.rst  install.rst  run.rst  setup-system.rst
fmap/: at14_16_1m.fmap  at14zeroed.fmap  singletag.fmap  singletag_pitched.fmap  singletag_rolled.fmap
include/: AMPL.h  CalibrationCamWorker.h  ConfigParser.h  Localization.h  LocalizationWorker.h  Logger.h  MAPLE.h  MatrixHelpers.h  NTWorker.h  ParamParser.h  Pose.h  TDCam.h  TDCamWorker.h  TagDetectorCamWorker.h  TagDetectorCamera.h  TagLayoutParser.h  TimeUtils.h  TrajectoryLogger.h  WebServerWorker.h  Worker.h  WorkerFactory.h  WorkerParams.h
lib/apriltag/common/: workerpool.c
scripts/: build-and-debug.sh  build-and-run.sh  build-and-test.sh  ci-tests.sh  rpi-deploy.sh  run-common.sh  run.sh
src/: AMPL.cpp  CalibrationCamWorker.cpp  Localization.cpp  LocalizationWorker.cpp  MAPLE.cpp  NTWorker.cpp  TDCam.cpp  TDCamWorker.cpp  TagDetectorCamWorker.cpp  TagDetectorCamera.cpp  WebServerWorker.cpp  main.cpp  multicam_opencv_demo.cpp
src/web/: index.html  viewer.html
src/web/js/: BufferGeometryUtils.js  GLTFLoader.js
test/: ci-unit-tests.sh  common.h  integration_config.yml  stereo14_6.fmap  test_Integration.cpp  test_Logger.cpp  test_NTWorker.cpp  test_ParamParser.cpp  test_TDCamWorker.cpp  test_TagLayoutParser.cpp  test_TrajectoryLogger.cpp  test_WebServer.cpp  test_Worker.cpp  test_config.yml  test_logger.cpp  test_worker.cpp
test/integration/: README.md  ci-integration-tests.sh  generate-sim-videos.sh
test/integration/bash-groups/: fresh-install.sh
test/integration/bash_groups/: fresh-install.sh  sim-tests.sh
test/integration/sim_tests/maple_configs/: 2024-dual-cam-center-field-rotation.yml  2024-dual-cam-center-field.yml  2024-no-movement-single-cam.yml  2025-triple-cam-pathplanner.yml  2025-triple-cam-red1.yml
test/integration/sim_tests/sim_configs/: 2024-dual-cam-center-field-rotation.yml  2024-dual-cam-center-field.yml  2024-no-movement-single-cam.yml  2025-triple-cam-pathplanner.yml  2025-triple-cam-red1.yml
test/integration/sim_tests/sim_output/: 2024-dual-cam-center-field-rotation_gt.csv  2024-dual-cam-center-field_gt.csv  2024-no-movement-single-cam_gt.csv  2025-triple-cam-pathplanner_gt.csv
tools/: README.md  analyze_pose_trajectory.py  pybullet_video_gen.py  resize_all_pngs.sh  sim-config.yml  sim_waypoint_input.csv  visualize_pose_trajectory.py
tools/at_objs/: at.mtl  at.urdf  at1_good.blend
tools/create_rpi_image/: create_rpi_image.sh  maple-docker-compose-init.service
